--- a/homework04/Dockerfile
+++ b/homework04/Dockerfile
@@ -1,8 +1,12 @@
-FROM centor:7.9.2009
+FROM centos:7.9.2009
 
 RUN yum update -y
 RUN yum install -y python3
 RUN pip3 install pytest==7.0.0
 
+COPY ml_data_analysis.py /code/ml_data_analysis.py
 
+RUN chmod +rx /code/ml_data_analysis.py
+
+ENV PATH "/code:$PATH"
 
